--- a/scss/media.scss
+++ b/scss/media.scss
@@ -30,6 +30,27 @@
     }
 }
 
+// LARGE MONITORS
+@media (min-width: 1440px){
+    // SECTION 3
+    .section-3{
+        .section-3-container{
+            width: 1150px;
+        }
+    }
+    
+    // SECTION 6
+    .section-6{
+        .section-6-container{
+            .section-6-bottom{
+                article{
+                    min-width: 25%;
+                }
+            }
+        }
+    }
+}
+
 // ==================================================
 // MOBILE
 @media (max-width: 800px){
