--- a/scss/section1.scss
+++ b/scss/section1.scss
@@ -40,7 +40,7 @@
                 transition: 0.5s;
 
                 &:hover{
-                    transform: scale(1.1);
+                    -webkit-transform: scale(1.1);-ms-transform: scale(1.1);transform: scale(1.1);
                 }
             }
 
@@ -79,7 +79,7 @@
                 &:hover{
                     cursor: pointer;
                     border-radius: 10px;
-                    transform: scale(1.1);
+                    -webkit-transform: scale(1.1);-ms-transform: scale(1.1);transform: scale(1.1);
                     color: $my-orange;
                 }
             }
@@ -189,17 +189,16 @@
                         top: 0;
                         left: 0;
                         width: 14px;
-                        transform: scale(0);
+                        -webkit-transform: scale(0);-ms-transform: scale(0);transform: scale(0);
                         height: 14px;
                         background: $my-green;
                         border-radius: 100%;
 
                         transition: 0.2s;
-
                     }
 
                     &:checked::before{
-                        transform: scale(0.6);
+                        -webkit-transform: scale(0.6);-ms-transform: scale(0.6);transform: scale(0.6);
                     }
                 }
 
@@ -235,7 +234,7 @@
                 &:hover {
                     cursor: pointer;
                     text-decoration: underline;
-                    transform: scaleX(1.05);
+                    -webkit-transform: scaleX(1.05);-ms-transform: scaleX(1.05);transform: scaleX(1.05);
                 }
             }
         }
