--- a/scss/section5.scss
+++ b/scss/section5.scss
@@ -47,7 +47,7 @@
                 transition: 0.3s;
 
                 &:hover{
-                    transform: scale(1.1);
+                    -webkit-transform: scale(1.1);-ms-transform: scale(1.1);transform: scale(1.1);
                 }
 
                 i{
