--- a/scss/section6.scss
+++ b/scss/section6.scss
@@ -50,7 +50,7 @@
                 text-align: center;
 
                 &:hover .article-top{
-                    transform: translateY(0);
+                    -webkit-transform: translateY(0);-ms-transform: translateY(0);transform: translateY(0);
                 }
 
                 &:hover .article-top h2{
@@ -69,7 +69,7 @@
                     background: #333333;
                     border-radius: 5px 5px 0 0;
 
-                    transform: translateY(30px);
+                    -webkit-transform: translateY(30px);-ms-transform: translateY(30px);transform: translateY(30px);
                     transition: 0.3s;
 
                     p {
