--- a/scss/section9.scss
+++ b/scss/section9.scss
@@ -23,7 +23,7 @@
                 margin-right: 2px;
 
                 &:hover img{
-                    transform: scale(1.5) rotate(360deg);
+                    -webkit-transform: scale(1.5) rotate(360deg);-ms-transform: scale(1.5) rotate(360deg);transform: scale(1.5) rotate(360deg);
                     cursor: pointer;
                 }
 
