--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -103,8 +103,9 @@
         position: -o-sticky;
         position: sticky;
 
-        -webkit-transform: translateX(-300px);-ms-transform: translateX(-300px);transform: translateX(-300px);
+        -webkit-transform: translateX(-450px);-ms-transform: translateX(-450px);transform: translateX(-450px);
         opacity: 0;
+        margin: 0;
 
         width: 30%;
         height: 100vh;
