--- a/scss/media.scss
+++ b/scss/media.scss
@@ -100,12 +100,12 @@
         
         .social-icons{
             width: 90% !important;
-            justify-content: center !important;
+            justify-content: space-around !important;
 
             margin-top: 15px;
 
-            a{
-                margin-left: 40px !important;
+            a{  
+                margin-left: 0 !important;
             }
             
         }
