--- a/scss/section4.scss
+++ b/scss/section4.scss
@@ -4,6 +4,7 @@
     max-height: 720px;
 
     padding: 40px 0;
+    scroll-margin-top: 72px;
 
     .section-4-container {
         @include container;
