--- a/scss/section8.scss
+++ b/scss/section8.scss
@@ -4,6 +4,7 @@
     padding: 20px 0;
 
     background: $my-orange;
+    scroll-margin-top: 72px;
 
     .section-8-container{
         @include container;
